--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "rich <rich@mbp>",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "jest": "^24.7.1",
     "moment": "^2.24.0",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-displacement-slideshow": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -26,6 +29,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-cli-plugin-fontawesome": "^0.2.0",
+    "vue-lazyload": "^1.2.6",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
