--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -1,5 +1,13 @@
 [
     {
+        "title": "Cyber Town Museum",
+        "description": "Using webgl and many assets from the Internet Archive I wanted to experiment with this VR social platform from the late 90's",
+        "url": "http://cybertown-museum.theoldnet.com/",
+        "imgObj": {
+            "src": "/static/gif/cybertown.gif",
+            "loading": "/static/gif/cybertown-preview.gif"
+        }
+    }, {
         "title": "The Old Net",
         "description": "For the 30th anniversary of the Web, I created an application that lets you browse the old internet on modern and vintage computers.",
         "url": "http://theoldnet.com",
