--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -36,7 +36,7 @@
     }, 
     {
         "title": "My Electronics Store",
-        "description": "I have produced some original hardware for hobbyist use, available for purchase on my store",
+        "description": "I have produced some original hardware for hobbyist use, available for purchase on my store.",
         "url": "https://www.tindie.com/stores/theoldnet/",
         "image": "/static/tindiesmall.png"
     },
@@ -52,7 +52,7 @@
     },
     {
         "title": "Manastorm VR",
-        "description": "A Virtual Reality card game where you throw the cards to summon creatures into battle.",
+        "description": "Available on Steam. A Virtual Reality card game where you throw the cards to summon creatures into battle.",
         "url": "http://manastormgame.com",
         "imgObj": {
             "src": "/static/gif/manastorm.gif",
@@ -79,54 +79,54 @@
     },
     {
         "title": "@RichBettridge",
-        "description": "Looking at my twitter media posts gives a good idea about my hobbies",
+        "description": "Looking at my twitter media posts gives a good idea about my hobbies.",
         "url": "https://twitter.com/RichBettridge/media",
         "image": "/static/richbettridge-twitter.png",
         "audio": "/static/audio/richbettridge.mp3"
     }, {
         "title": "Linux Exam Developer",
-        "description": "Define job task domains and competencies, wrote and reviewed certification content, and determined the passing score for the exam.",
+        "description": "Defined job task domains and competencies, wrote and reviewed certification content, and determined the passing score for the exam.",
         "url": "https://www.youracclaim.com/badges/a213bf3f-e0b4-4957-a811-ebee72fcb647/linked_in",
 	"image": "/static/linux.png"
     }, {
         "title": "@DaGGaSoft",
-        "description": "Looking at my game developer twitter posts gives a good idea about my work",
+        "description": "Looking at my game developer twitter posts gives a good idea about my work.",
         "url": "https://twitter.com/DaGGaSoft/media",
         "image": "/static/daggasoft-twitter.png",
         "audio": "/static/audio/daggasoft.mp3"
     }, {
         "title": "Super Markup World",
-        "description": "An award winning game, teaching javascript and css using native HTML",
+        "description": "An award winning game, teaching javascript and css using native HTML.",
         "url": "http://supermarkupworld.com",
         "image": "/static/supermarkupworld.png",
         "audio": "/static/audio/supermarkupworld.mp3"
     }, {
         "title": "My Game Developer Blog",
-        "description": "If you want to get a good idea of the type of work I do please head over to my blog",
+        "description": "If you want to get a good idea of the type of work I do please head over to my blog.",
         "url": "http://daggasoft.wordpress.com",
         "image": "/static/daggasoft-wordpress.png",
         "audio": "/static/audio/daggasoftblog.mp3"
     }, {
         "title": "Vintage Computer Collection",
-        "description": "I love collecting and playing with vintage computers, game consoles and other old technology",
+        "description": "I love collecting and playing with vintage computers, game consoles and other old technology.",
         "url": "https://www.youtube.com/watch?v=VZ-MXqM5mYc&list=PL3fIIFgD61TlTzlaXIpAqfFBuz_-TFE8E",
         "image": "/static/vintage2.png",
         "audio": "/static/audio/vintage.mp3"
     }, {
         "title": "Game Dev Website",
-        "description": "You can see all of my games here from game jams / hackathons, experiments, retail releases and contract work",
+        "description": "You can see all of my games here from game jams / hackathons, experiments, retail releases and contract work.",
         "url": "http://daggasoft.com",
         "image": "/static/daggasoft2.png",
         "audio": "/static/audio/daggasoftcom.mp3"
     }, {
         "title": "Computer Heritage Group",
-        "description": "I am a co-founder of the Computer Heritage Group",
+        "description": "I am a co-founder of the Computer Heritage Group. We collect, restore, study and appreciate old technology.",
         "url": "http://computerheritagegroup.org",
         "image": "/static/heritage2.png",
         "audio": "/static/audio/heritage.mp3"
     }, {
         "title": "Home Awesomation",
-        "description": "If you want to see my electronic and software projects about home automation check out my projects here",
+        "description": "You can see my electronic and software projects about home automation check out my projects here.",
         "url": "http://homeawesomation.com",
         "image": "/static/homeawesomation2.png",
         "audio": "/static/audio/homeawesomation.mp3"
