--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -1,5 +1,15 @@
 [
     {
+        "title": "3D Animation",
+        "description": "This is my work while I learn the skills of a 3D Animator / VFX Artist.",
+        "url": "https://www.youtube.com/playlist?list=PLDpWUwLetNwP8L-nm_K54RuGZOsKqeZ-P",
+        "imgObj": {
+            "src": "/static/gif/blender.gif",
+            "loading": "/static/gif/blender-preview.png"
+        }
+    }, 
+
+    {
         "title": "VRML Museum",
         "description": "Using WebGL and many assets from the Internet Archive I wanted to experiment with the VR Markup Language the late 90's",
         "url": "http://cybertown-museum.theoldnet.com/",
