recropped cat image

--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -22,7 +22,7 @@
         "title": "My Electronics Store",
         "description": "I have produced some original hardware for hobbyist use, available for purchase on my store.",
         "url": "https://www.tindie.com/stores/theoldnet/",
-        "image": "/static/storecat.png"
+        "image": "/static/storecat2.png"
     },
     {
         "title": "Game of Life",
