updated youtube link

--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -2,7 +2,7 @@
     {
         "title": "3D Animation",
         "description": "This is my work while I learn the skills of a 3D Animator / VFX Artist.",
-        "url": "https://www.youtube.com/playlist?list=PLDpWUwLetNwP8L-nm_K54RuGZOsKqeZ-P",
+        "url": "https://www.youtube.com/watch?v=7_uQfI18_u0&list=PLDpWUwLetNwP8L-nm_K54RuGZOsKqeZ-P&index=1",
         "imgObj": {
             "src": "/static/gif/blender.gif",
             "loading": "/static/gif/blender-preview.png"
